<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingLeft="64dp"
    android:paddingRight="64dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/place_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/place_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/place_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/place_address"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/place_tel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/place_telephone"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/place_rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/place_rating"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <Button
        android:id="@+id/directions_button"
        android:text="@string/directions_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/website_button"
        android:text="@string/website_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>