<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/popup"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="15dp"
    android:theme="@style/AppTheme.PopupOverlay"
    android:elevation="10dp"
    android:background="@color/popup_colour">


    <TextView
        android:id="@+id/initial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phrase"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/translation"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/translation"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:weightSum="1">

        <Button
            android:id="@+id/listen_button"
            android:layout_marginTop="10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/listen_button"
            android:layout_gravity="center"
            android:layout_weight="0.5" />

        <Button
            android:id="@+id/close_button"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/close_button"
            android:layout_weight="0.5"/>
    </LinearLayout>


</LinearLayout>
