<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_currency_converter"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.finalyear.project.travelproject.CurrencyConverter">

    <include android:id="@+id/my_toolbar"
        layout="@layout/tool_bar"/>

    <TextView
        android:id="@+id/conversion_output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@layout/tool_bar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/conversion_output"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/money_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/conversion_output"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:text="@string/default_amount"
        android:inputType="numberDecimal"
        android:textSize="24sp" />


    <Spinner
        android:id="@+id/spinner_currency_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/money_input"
        android:layout_marginTop="20dp"/>


    <TextView
        android:id="@+id/to_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner_currency_in"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:text="@string/to_label"
        android:textSize="24sp" />

    <Spinner
        android:id="@+id/spinner_currency_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/to_label"/>

    <Button
        android:id="@+id/convert_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner_currency_out"
        android:layout_centerHorizontal="true"
        android:text="@string/convert_button"
        android:layout_marginTop="20dp"
        android:textSize="22sp"/>

    <Button
        android:id="@+id/reset_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/convert_button"
        android:text="@string/reset_button"
        android:layout_marginTop="5dp"
        android:textSize="22sp"/>

</RelativeLayout>
