<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.finalyear.project.travelproject.MainActivity">

    <include
        android:id="@+id/my_toolbar"
        layout="@layout/tool_bar"/>

    <Button
        android:text="@string/search_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:id="@+id/search_button"
        style="@android:style/Widget.Button"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:layout_below="@+id/my_toolbar"
        android:layout_alignLeft="@+id/map_button"
        android:layout_alignStart="@+id/map_button"
        android:layout_alignRight="@+id/map_button"
        android:layout_alignEnd="@+id/map_button" />

    <Button
        android:text="@string/map_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/map_button"
        style="@android:style/Widget.Button"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:layout_below="@+id/search_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp" />

    <Button
        android:text="@string/recent_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recent_button"
        style="@android:style/Widget.Button"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:layout_below="@+id/map_button"
        android:layout_alignLeft="@+id/map_button"
        android:layout_alignStart="@+id/map_button"
        android:layout_marginTop="44dp"/>

    <Button
        android:text="@string/myTrips_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/trips_button"
        style="@android:style/Widget.Button"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:layout_marginTop="44dp"
        android:layout_below="@+id/recent_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
